--- a/client/src/pages/BusinessPages/Marketplace/SingleProductCard/productcard.module.css
+++ b/client/src/pages/BusinessPages/Marketplace/SingleProductCard/productcard.module.css
@@ -129,3 +129,9 @@
     width: 100%;
 }
 
+.originalPrice {
+    text-decoration: line-through; /* Add a line through the text */
+    font-weight: bold; /* Change the text color to red */
+    color: red;
+  }
+
